@@ -6,12 +6,15 @@ import com.badlogic.gdx.Input;
 import com.badlogic.gdx.graphics.Color;
 
 public class Player extends Entity {
+    private int collected_gold;
+
 
     Player(int x_pos, int y_pos) {
         super(x_pos, y_pos, Color.PINK);
+        collected_gold = 0;
     }
 
-    public void take_input(int grid_size) {
+    public boolean take_input(int grid_size) {
         if (Gdx.input.isKeyJustPressed(Input.Keys.LEFT)) {
             x_pos-=1;
         }if (Gdx.input.isKeyJustPressed(Input.Keys.RIGHT)) {
@@ -22,8 +25,16 @@ public class Player extends Entity {
             y_pos-=1;
         }
 
-        x_pos = Math.clamp(x_pos, 0, grid_size-1);
-        y_pos = Math.clamp(y_pos, 0, grid_size-1);
+        x_pos = clamp(x_pos, 0, grid_size-1);
+        y_pos = clamp(y_pos, 0, grid_size-1);
+    }
+
+    private int clamp(int val, int min, int max) {
+        return Math.max(min, Math.min(max, val));
+    }
+
+    public void collect_gold() {
+        collected_gold++;
     }
 
 }
